# Cowcode

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
cowcode/: .cowcode.yaml  .gitignore  COWCODE.md  config.example.yaml  pyproject.toml
cowcode/cowcode/: __init__.py  __main__.py  agent.py  agent_team.py  agent_team_mailbox.py  agent_tool.py  agent_worktree.py  cli.py  completion.py  config.py  conversation.py  environment.py  fork.py  prompt.py  prompt_skills.py  protocol_defaults.py  run_to_completion.py  runtime.py  session.py  task_manager.py  task_notice.py  task_tools.py  team_member.py  worktree_adapter.py
cowcode/cowcode/command/: __init__.py  builtin_hooks.py  builtin_ui.py  (+11 more)
cowcode/tests/: test_agent.py  test_command_builtins.py  test_command_dispatch.py  test_command_registry.py  test_config.py  test_conversation.py  test_coordinator.py  test_hook_engine.py  test_hook_executor.py  test_hook_loader.py  test_instructions_loader.py  test_mcp_config.py  test_mcp_manager.py  test_mcp_tool.py  test_mcp_ui.py  test_memory.py  test_permission_matcher.py  test_permission_rule.py  test_permission_settings.py  test_prompt.py  test_provider_anthropic.py  test_provider_openai.py  test_runtime.py  test_sandbox_tmp.py  test_session.py  test_skills_active_render.py  test_skills_catalog.py  test_skills_parser.py  test_subagent.py  test_team_agent_tool.py  test_team_backend_detect.py  test_team_backend_tmux.py  test_team_mailbox.py  test_team_mailbox_agent.py  test_team_manager.py  test_team_registry.py  test_team_tasks.py  test_team_tools.py  test_tool.py  test_tool_filter.py  (+2 more)
(+174 files in other folders)
